## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = IlmCtl IlmCtlMath IlmCtlMathTest IlmCtlSimd IlmCtlTest doc


EXTRA_DIST = \
	AUTHORS COPYING ChangeLog INSTALL LICENSE NEWS \
        README README.CVS README.OSX bootstrap

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = CTL.pc

