## Process this file with automake to produce Makefile.in

# tell autoconf to include the m4 macros in the /m4 directory 
# (an alternative to the acinclude.m4 mechanism)
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = IlmImfCtl IlmImfCtlTest

EXTRA_DIST = \
	AUTHORS COPYING ChangeLog INSTALL LICENSE NEWS \
        README README.CVS README.OSX bootstrap

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = OpenEXR_CTL.pc


